[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nubra_flexi_payload"
version = "0.1.1"
description = "Build Nubra flexi basket payloads from grouped option legs"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [{ name = "Akshay N" }]
dependencies = [
  "pandas>=2.0",
]

[project.urls]
Homepage = "https://github.com/akshayn-spec/nubra_flexi_payload"
