[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nubra_flexi_payload"
version = "0.1.2"
description = "Build dynamic Nubra flexi basket payloads for multi-leg option strategies with aggressive auto-priced limits"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [{ name = "Akshay N" }]
dependencies = [
  "pandas>=2.0",
]

[project.urls]
Homepage = "https://github.com/akshayn-spec/nubra_flexi_payload"
